--- a/men_product7.html
+++ b/men_product7.html
@@ -320,34 +320,34 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/d69e0e42-cfb0-4c13-81ff-4c961bfe5ebf/benassi-jdi-mens-slides-KyTVvF.png" alt="Gym Trainers" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/55820803-0d4e-429a-a3fb-ff70296cedc3/AS+M+NP+DF+TOP+SL+TIGHT.png" alt="Gym Trainers" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/d69e0e42-cfb0-4c13-81ff-4c961bfe5ebf/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 1">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/3c05bb97-6e6c-4c1e-b1fc-bdd6ff0996d4/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 2">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/34d9e07e-7f3c-441e-938a-93098246e560/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 3">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/55820803-0d4e-429a-a3fb-ff70296cedc3/AS+M+NP+DF+TOP+SL+TIGHT.png" onclick="changeImage(this)" alt="Angle 1">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a9979986-0266-4bd1-b1b0-c949c0f3b15a/AS+M+NP+DF+TOP+SL+TIGHT.png" onclick="changeImage(this)" alt="Angle 2">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/711f55dd-aa1e-41eb-8608-47aa3fcf893f/AS+M+NP+DF+TOP+SL+TIGHT.png" onclick="changeImage(this)" alt="Angle 3">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Gym Trainers</h1>
-        <h2>₹4,299</h2>
+        <h1>Nike Pro Fitness Top</h1>
+        <h2> ₹1495.00</h2>
 
-        <p><strong>Description:</strong> These gym trainers are perfect for your workouts, providing both comfort and performance. With a sleek design and durable construction, they offer great support for all types of training.</p>
+        <p><strong>Description:</strong> Engineered for performance, Nike Pro gear offers breathable, stretchy support that moves with you — ideal for high-intensity training and peak performance.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">6</div>
-            <div class="size-option" onclick="selectSize(this)">7</div>
-            <div class="size-option" onclick="selectSize(this)">8</div>
-            <div class="size-option" onclick="selectSize(this)">9</div>
-            <div class="size-option" onclick="selectSize(this)">10</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="007" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="007" data-name="Nike Pro Fitness Top" data-price=" ₹1495.00">
   		        Add to Bag
 	        </button>
         </div>
