--- a/men_product8.html
+++ b/men_product8.html
@@ -320,34 +320,33 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/d69e0e42-cfb0-4c13-81ff-4c961bfe5ebf/benassi-jdi-mens-slides-KyTVvF.png" alt="Basketball Shoes" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/191eeea5-8a43-4c40-b9a1-6c3735e97f82/SEL+MNK+DF+JSY+JAMES.png" alt="Basketball Shoes" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/d69e0e42-cfb0-4c13-81ff-4c961bfe5ebf/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 1">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/3c05bb97-6e6c-4c1e-b1fc-bdd6ff0996d4/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 2">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/34d9e07e-7f3c-441e-938a-93098246e560/benassi-jdi-mens-slides-KyTVvF.png" onclick="changeImage(this)" alt="Angle 3">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/191eeea5-8a43-4c40-b9a1-6c3735e97f82/SEL+MNK+DF+JSY+JAMES.png" onclick="changeImage(this)" alt="Angle 1">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/feb064aa-00d2-4a6f-b936-3c265079f2bc/SEL+MNK+DF+JSY+JAMES.png" onclick="changeImage(this)" alt="Angle 2">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Basketball Shoes</h1>
-        <h2>₹6,799</h2>
+        <h1>LeBron James Los Angeles Lakers 2024 Select Series</h1>
+        <h2> ₹7995.00</h2>
 
         <p><strong>Description:</strong> These basketball shoes are designed for maximum performance on the court. Offering great support, comfort, and traction, they're perfect for serious players looking for an edge in their game.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">6</div>
-            <div class="size-option" onclick="selectSize(this)">7</div>
-            <div class="size-option" onclick="selectSize(this)">8</div>
-            <div class="size-option" onclick="selectSize(this)">9</div>
-            <div class="size-option" onclick="selectSize(this)">10</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="008" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="008" data-name="LeBron James Los Angeles Lakers 2024 Select Series" data-price="₹7995.00">
   		        Add to Bag
 	        </button>
         </div>
