--- a/men_product9.html
+++ b/men_product9.html
@@ -320,34 +320,34 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/96031f93-bbe3-4b46-b2ac-d29f6798f4a7/urban-formal-sneakers.jpg" alt="Urban Formal Sneakers" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b09707fa-7e12-487c-8d4f-27938c0c40b6/M+NK+TCH+FLC+FZ+WR+HOODIE.png" alt="Urban Formal Sneakers" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/96031f93-bbe3-4b46-b2ac-d29f6798f4a7/urban-formal-sneakers.jpg" onclick="changeImage(this)" alt="Angle 1">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/96031f93-bbe3-4b46-b2ac-d29f6798f4a7/urban-formal-sneakers.jpg" onclick="changeImage(this)" alt="Angle 2">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/96031f93-bbe3-4b46-b2ac-d29f6798f4a7/urban-formal-sneakers.jpg" onclick="changeImage(this)" alt="Angle 3">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b09707fa-7e12-487c-8d4f-27938c0c40b6/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Angle 1">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/cf6d660d-5946-41fd-a8dc-0a04647b8db4/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Angle 2">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/af57424c-f373-459d-9171-50865a379f0e/M+NK+TCH+FLC+FZ+WR+HOODIE.png" onclick="changeImage(this)" alt="Angle 3">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Urban Formal Sneakers</h1>
-        <h2>₹3,499</h2>
+        <h1>Nike Tech Men's Full-Zip Windrunner Hoodie</h1>
+        <h2> ₹11556.09</h2>
 
-        <p><strong>Description:</strong> These urban formal sneakers combine sleek design with comfort, making them a perfect fit for both professional and casual occasions. Ideal for daily wear or special events, they offer a stylish yet versatile look.</p>
+        <p><strong>Description:</strong> Modern style meets all-day comfort. The Nike Tech Windrunner Hoodie features a sleek, streamlined fit with lightweight fleece and iconic chevron design — perfect for layering in any season.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">6</div>
-            <div class="size-option" onclick="selectSize(this)">7</div>
-            <div class="size-option" onclick="selectSize(this)">8</div>
-            <div class="size-option" onclick="selectSize(this)">9</div>
-            <div class="size-option" onclick="selectSize(this)">10</div>
+            <div class="size-option" onclick="selectSize(this)">S</div>
+            <div class="size-option" onclick="selectSize(this)">M</div>
+            <div class="size-option" onclick="selectSize(this)">L</div>
+            <div class="size-option" onclick="selectSize(this)">XL</div>
+            <div class="size-option" onclick="selectSize(this)">XXL</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="009" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="009" data-name="Nike Tech Men's Full-Zip Windrunner Hoodie" data-price="₹11556.09">
   		        Add to Bag
 	        </button>
         </div>
