--- a/women_product2.html
+++ b/women_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Pegasus Premium</title>
+  <title>Nike Sportswear Essential</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/80b18cd6-e23b-4d67-a2c3-837e781c1b4f/NIKE+PEGASUS+PREMIUM.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/6e862338-865c-49df-92ce-753a49d491a7/AS+W+NSW+ESSNTL+SS+POLO+CRP+TO.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/80b18cd6-e23b-4d67-a2c3-837e781c1b4f/NIKE+PEGASUS+PREMIUM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/35e463bc-223c-423b-bb05-4738cb51a613/NIKE+PEGASUS+PREMIUM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a39d61ec-5a60-440d-b7c3-f8c37ec89066/NIKE+PEGASUS+PREMIUM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b118e88b-ffe6-4a40-8850-93ebc4e8f2d7/NIKE+PEGASUS+PREMIUM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/6e862338-865c-49df-92ce-753a49d491a7/AS+W+NSW+ESSNTL+SS+POLO+CRP+TO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/d9cf2b4e-917e-4ea5-9b29-2baec9892e8e/AS+W+NSW+ESSNTL+SS+POLO+CRP+TO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src=https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/4de5d71d-eecd-43cb-bf05-a63c1c9b143a/AS+W+NSW+ESSNTL+SS+POLO+CRP+TO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src=https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/c87e0b5b-da23-4d75-adb3-3eb16bb43633/AS+W+NSW+ESSNTL+SS+POLO+CRP+TO.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Pegasus Premium</h1>
+        <h1>Nike Sportswear Essential</h1>
         <h2>₹5299</h2>
 
-        <p><strong>Description:</strong> Unleash your speed with Nike Pegasus Premium, engineered for ultimate comfort and explosive performance. Glide through every stride with responsive cushioning and a sleek, aerodynamic design built to elevate every run.</p>
+        <p><strong>Description:</strong> Elevate your everyday look with the Nike Sportswear Essential, combining classic style with modern comfort. Crafted from soft, premium fabric, it's perfect for layering or wearing solo, wherever your day takes you.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -392,7 +392,7 @@
         </div>
 
       <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="102" data-name="Nike Pegasus Premium" data-price="5299.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="102" data-name="Nike Sportswear Essential" data-price="5299.99">
   		        Add to Bag
 	        </button>
         </div>
