--- a/women_product5.html
+++ b/women_product5.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Women's Short-Sleeve T-Shirt</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,20 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/69fd71be-890f-454d-96dd-995ce9d0d7d5/AS+W+NK+ONE+CLASSIC+DF+SS+TOP.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/69fd71be-890f-454d-96dd-995ce9d0d7d5/AS+W+NK+ONE+CLASSIC+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/738052ef-1daf-4033-83d3-787808005bc2/AS+W+NK+ONE+CLASSIC+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/c2bc233c-d6a9-4d03-9584-129d5865c10e/AS+W+NK+ONE+CLASSIC+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Women's T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Women's Short-Sleeve T-Shirt</h1>
+        <h2>₹1499</h2>
 
-        <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
+        <p><strong>Description:</strong> Stay effortlessly stylish in the Women’s Short-Sleeve T-Shirt, designed with a soft, breathable fabric for all-day comfort. Its relaxed fit and timeless design make it a perfect staple for any casual wardrobe.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +387,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="105" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="105" data-name="Women's Short-Sleeve T-Shirt" data-price="129.99">
   		        Add to Bag
 	        </button>
         </div>
