--- a/women_product6.html
+++ b/women_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Women's Skirt<title>
   <style>
     html, body {
       margin: 0;
@@ -364,19 +364,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b5e3f1c2-2698-4437-9293-b7c627e559ef/W+NSW+PK+SKIRT+SW.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b5e3f1c2-2698-4437-9293-b7c627e559ef/W+NSW+PK+SKIRT+SW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/00314bc2-e52e-439e-9464-f2ad27bc3917/W+NSW+PK+SKIRT+SW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/54b19b9f-6e15-4921-ad42-491e2a46aae5/W+NSW+PK+SKIRT+SW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/4057b601-a04e-42a1-8bec-8d0b3788e8ac/W+NSW+PK+SKIRT+SW.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
         <h1>Nike Air Women's T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h2>3507.99</h2>
 
         <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
 
@@ -393,7 +393,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="106" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="106" data-name="Nike Kids T-shirt" data-price="3507.99">
   		        Add to Bag
 	        </button>
         </div>
