--- a/women_product6.html
+++ b/women_product6.html
@@ -375,10 +375,10 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Women's T-Shirt</h1>
-        <h2>3507.99</h2>
+        <h1>Women's Skirt</h1>
+        <h2>₹3507.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
+        <p><strong>Description:</strong> Step out in style with the Women’s Skirt, offering a perfect blend of sporty flair and everyday elegance. Made with lightweight, breathable fabric, it moves with you for all-day comfort and confidence.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="106" data-name="Nike Kids T-shirt" data-price="3507.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="106" data-name="Women's Skirt" data-price="3507.99">
   		        Add to Bag
 	        </button>
         </div>
