--- a/women_product7.html
+++ b/women_product7.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Women's High-Waisted Graphic Leggings</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,20 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/2ead1a1f-690f-46e6-927c-93f44e0925fa/AS+W+NSW+NK+CLSC+GX+HR+TIGHT+F.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/2ead1a1f-690f-46e6-927c-93f44e0925fa/AS+W+NSW+NK+CLSC+GX+HR+TIGHT+F.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/edc481ec-43de-4707-9d2b-e19601f91b8c/AS+W+NSW+NK+CLSC+GX+HR+TIGHT+F.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a0d36578-4eab-4bd8-830e-9cddba5aee3a/AS+W+NSW+NK+CLSC+GX+HR+TIGHT+F.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Women's T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Women's High-Waisted Graphic Leggings</h1>
+        <h2>₹2695.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
+        <p><strong>Description:</strong> Make a bold statement with Women’s High-Waisted Graphic Leggings, featuring eye-catching designs and a sculpting fit. Crafted with stretchy, sweat-wicking fabric, they deliver style and support from workouts to weekends.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +387,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="107" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="107" data-name="Women's High-Waisted Graphic Leggings" data-price="2695.99">
   		        Add to Bag
 	        </button>
         </div>
