--- a/women_athletix.html
+++ b/women_athletix.html
@@ -328,7 +328,7 @@
             <div class="product-card">
                 <a href="women_product7.html">
                     <img src="product7.jpg" alt="Women's Mid-Rise Shorts">
-                    <h3>Women's Mid-Rise Shorts</h3>
+                    <h3>Women's High-Waisted Graphic Leggings</h3>
                 </a>
                 <p>₹4,299</p>
             </div>
