--- a/women_product8.html
+++ b/women_product8.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike Air Max 270</title>
+  <title>Women's Sleeveless Graphic T-Shirt</title>
   <style>
     html, body {
       margin: 0;
@@ -364,19 +364,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/32cb6545-a238-4cbb-a7cb-696348d9f840/W+J+SLVLS+GFX+TEE+VLT.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/611b7efa-82f9-4815-abf6-3e77dd98d891/AS+W+NK+ONE+RELAXED+DF+SS+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/32cb6545-a238-4cbb-a7cb-696348d9f840/W+J+SLVLS+GFX+TEE+VLT.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/c9f5e802-51d7-4fb1-9d18-6fd42dd0c4de/W+J+SLVLS+GFX+TEE+VLT.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/386dc857-c437-4d0e-bf91-6174f4825eca/W+J+SLVLS+GFX+TEE+VLT.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/1d2d1dc0-45c3-4077-9cd3-d072fde694e8/W+J+SLVLS+GFX+TEE+VLT.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Women's T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Women's Sleeveless Graphic T-Shirt</h1>
+        <h2>₹2995.00</h2>
 
         <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
 
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="108" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="108" data-name="Women's Sleeveless Graphic T-Shirt" data-price="2995.00">
   		        Add to Bag
 	        </button>
         </div>
