--- a/women_product8.html
+++ b/women_product8.html
@@ -378,7 +378,7 @@
         <h1>Women's Sleeveless Graphic T-Shirt</h1>
         <h2>₹2995.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Women's T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric is made for all-day comfort. The breathable material provides lightweight feel.</p>
+        <p><strong>Description:</strong> Show off your style in the Women’s Sleeveless Graphic T-Shirt, featuring bold prints and a breezy, relaxed fit. Made with soft, breathable fabric, it’s perfect for workouts or casual days out.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
