--- a/women_athletix.html
+++ b/women_athletix.html
@@ -341,7 +341,7 @@
             </div>
             <div class="product-card">
                 <a href="women_product9.html">
-                    <img src="product9.jpg" alt="Women's Dri-FIT Packable Running Jacket">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/793e91fe-e7dd-4080-8efc-c81555f68d75/AS+W+NK+SWIFT+NVLT+DF+JKT.png" alt="Women's Dri-FIT Packable Running Jacket">
                     <h3>Women's Dri-FIT Packable Running Jacket</h3>
                 </a>
                 <p>₹3,499</p>
