--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -286,7 +286,7 @@
             <div class="product-card">
                 <a href="kids_product1.html">
                     <img src="product1.jpg" alt="Adidas Lilo & Stitch T-Shirt">
-                    <h3>Adidas Lilo & Stitch T-Shirt</h3>
+                    <h3>Nike Kid's Brazil Fifa T-Shirt</h3>
                 </a>
                 <p>₹3,599</p>
             </div>
