--- a/kids_product1.html
+++ b/kids_product1.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids Clothing</title>
+  <title>Nike Kid's Brazil Fifa T-Shirt</title>
   <style>
     html, body {
       margin: 0;
@@ -376,7 +376,7 @@
 
       <div class="product-details">
         <h1>Nike Kid's Brazil Fifa T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h2>₹ 3995.00</h2>
 
         <p><strong>Description:</strong> The Nike Fifa T-shirt series brings home the feel of a true jersey from your favorite football teams. The t-shirt is made of polyster and cotton </p>
 
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
           <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="201" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="201" data-name="Nike Kids T-shirt" data-price="3995.00">
   		        Add to Bag
 	        </button>
         </div>
