--- a/kids_product2.html
+++ b/kids_product2.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids Clothing</title>
+  <title>Essentials Allover Print Jogger Set</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/2bd67e17db834aacba3599f98db51f73_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_03_laydown_hover.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/3cd6f070c1004af0a07ab0bb3b9248ae_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_04_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/257d472d140e4534b6204716b31f6892_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_05_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Kid's Brazil Fifa T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Essentials Allover Print Jogger Set</h1>
+        <h2>₹ 1999.50</h2>
 
-        <p><strong>Description:</strong> The Nike Fifa T-shirt series brings home the feel of a true jersey from your favorite football teams. The t-shirt is made of polyster and cotton </p>
+        <p><strong>Description:</strong> Stand out in comfort with the Essentials Allover Print Jogger Set, featuring a bold design and a soft, cozy feel. Perfect for lounging or stepping out, it brings effortless style to your everyday look. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="202" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="202" data-name="Essentials Allover Print Jogger Set" data-price="1999.50">
   		        Add to Bag
 	        </button>
         </div>
