--- a/kids_product3.html
+++ b/kids_product3.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids Clothing</title>
+  <title>Disney Mickey Mouse Tee Set</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/d85bb8c107ff4bca8b312bbe1e11e376_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_03_laydown_hover.jpg" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/0595399a-68d1-42ce-94fb-3b5ffa050dc2/CBF+Y+NK+DF+STAD+JSY+SS+HM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/d85bb8c107ff4bca8b312bbe1e11e376_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_03_laydown_hover.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/9126d91f029a462898f6b8dcdea586f0_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_04_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/88ee8bd4cb4d4466abb97b5341cf1839_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_01_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/1625cb05262543a6b0f82ec59487e86f_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_05_laydown.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Kid's Brazil Fifa T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Disney Mickey Mouse Tee Set</h1>
+        <h2>₹ 1799.50</h2>
 
-        <p><strong>Description:</strong> The Nike Fifa T-shirt series brings home the feel of a true jersey from your favorite football teams. The t-shirt is made of polyster and cotton </p>
+        <p><strong>Description:</strong> Add a touch of magic to your wardrobe with the Disney Mickey Mouse Tee Set, featuring playful graphics and soft, all-day comfort. Perfect for fans of all ages, it blends iconic style with everyday fun. </p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
       <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="203" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="203" data-name="Disney Mickey Mouse Tee Set" data-price="1799.50">
   		        Add to Bag
 	        </button>
         </div>
