--- a/kids_product4.html
+++ b/kids_product4.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kids Clothing</title>
+  <title>Older Kids' Nike Dri-FIT Football Replica Shirt</title>
   <style>
     html, body {
       margin: 0;
@@ -375,10 +375,10 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Kid's Brazil Fifa T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Older Kids' Nike Dri-FIT Football Replica Shirt</h1>
+        <h2>₹ 3995.00</h2>
 
-        <p><strong>Description:</strong> The Nike Fifa T-shirt series brings home the feel of a true jersey from your favorite football teams. The t-shirt is made of polyster and cotton </p>
+        <p><strong>Description:</strong>Inspire young athletes with the Older Kids' Nike Dri-FIT Football Replica Shirt, designed with sweat-wicking fabric for cool, dry comfort. Featuring authentic team details, it’s perfect for showing pride on and off the pitch.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +388,11 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="204" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="204" data-name="Older Kids' Nike Dri-FIT Football Replica Shirt" data-price="3995.00">
   		        Add to Bag
 	        </button>
         </div>
