--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -307,7 +307,7 @@
             <div class="product-card">
                 <a href="kids_product4.html">
                     <img src="product4.jpg" alt="Lil Nigga Joggers Set">
-                    <h3>Lil Nigga Joggers Set</h3>
+                    <h3>Older Kids' Nike Dri-FIT Football Replica Shirt</h3>
                 </a>
                 <p>₹4,799</p>
             </div>
