--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -321,9 +321,9 @@
             <div class="product-card">
                 <a href="kids_product6.html">
                     <img src="product6.jpg" alt="Lil MethHead Shoes">
-                    <h3>Lil MethHead Shoes</h3>
+                    <h3>Kylian Mbappé Club Fleece</h3>
                 </a>
-                <p>₹5,999</p>
+                <p>₹ 2995.00</p>
             </div>
             <div class="product-card">
                 <a href="kids_product7.html">
