--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -321,7 +321,7 @@
             <div class="product-card">
                 <a href="kids_product6.html">
                     <img src="product6.jpg" alt="Lil MethHead Shoes">
-                    <h3>Kylian Mbappé Club Fleece</h3>
+                    <h3>Older Kids' Football Hoodie</h3>
                 </a>
                 <p>₹ 2995.00</p>
             </div>
